--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
            <div class="subscribe">
                 <h3 class="title-social">підпишіться на розсилку</h3>
                 <form class="form-footer">
-                    <input class="form-input-foo" type="email" name="email" placeholder="E-mail">
+                    <input class="form-input-foo" type="email" name="email" placeholder="E-mail" required>
                     <button type="submit" class="bnt-footer">
                         Підписатися
                         <svg class="icon-send" width="24" height="24">
@@ -403,7 +403,7 @@
             
     </footer>
 <!-- Модальне вікно -->
-    <div class="backdrop is-hiddenf" data-modal>
+    <div class="backdrop is-hidden" data-modal>
         <div class="modal">
             <button type="button" class="modal-close" data-modal-close>
                 <svg class="icon-close" width="11" height="11">
@@ -415,21 +415,21 @@
                 <form class="modal-form">
                     <div class="form-field">
                         <label class="form-label" for="name">Ім'я</label>
-                        <input class="form-input" type="name" name="name" id="name">
+                        <input class="form-input" type="text" name="name" id="name" required>
                         <svg class="icon-form">
                             <use href="./images/sprite.svg#icon-icon-person" width="18" height="18"></use>
                         </svg>
                     </div>
                     <div class="form-field">
                         <label class="form-label" for="tel">Телефон</label>
-                        <input class="form-input" type="tel" name="tel" id="tel">
+                        <input class="form-input" type="number" name="tel" id="tel" required>
                         <svg class="icon-form">
                             <use href="./images/sprite.svg#icon-icon-phone" width="18" height="18"></use>
                         </svg>
                     </div>
                     <div class="form-field">
                         <label class="form-label" for="email">Пошта</label>
-                        <input class="form-input" type="email" name="email" id="email">
+                        <input class="form-input" type="email" name="email" id="email" required>
                         <svg class="icon-form">
                             <use href="./images/sprite.svg#icon-icon-email" width="18" height="18"></use>
                         </svg>
@@ -439,10 +439,11 @@
                         <textarea class="form-text" name="comment" id="comment" rows="10" placeholder="Введіть текст"></textarea>
                     </div>
                     <label class="checkbox-label">
-                        <input class="checkbox" type="checkbox" name="policy">
-                        <svg class="checkbox-icon" width="15" height="15">
+                        <input class="checkbox" type="checkbox" name="policy" required>
+                        <span class="checkbox-icon"></span>
+                        <!-- <svg class="checkbox-icon" width="15" height="15">
                             <use href="./images/sprite.svg#icon-icon-check"></use>
-                        </svg>
+                        </svg> -->
                         Погоджуюся з розсилкою та приймаю<a href="./">Умови договору</a>
                     </label>
                 
